Fix header styles on small screens.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -8,6 +8,7 @@ body {
 
 	font-size: 14px;
 	line-height: 100%;
+	min-width: 350px;
 
 	@include respond-to( $bp-m ) {
 		font-size: 16px;
