--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -1,7 +1,7 @@
 
 
 section.content {
-	margin-top: 77px;
+	margin-top: 71px;
 
 	@include respond-to( $bp-m ) {
 		margin-top: 100px;
